--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "build": "next build",
     "start": "next start"
   },
+  "browser": {
+    "fs": false
+  },
   "dependencies": {
-    "next": "10.2.0",
+    "next": "^10.2.0",
+    "next-images": "^1.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.32.13"
+    "sass": "^1.32.13",
+    "sharp11": "^2.0.2",
+    "tone": "^14.7.77"
   }
 }
