--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "build-export": "bash -c 'rm -fr ../jazzyears.github.io/{404.html,_next,index.html,posts} && npm run build && npx next export && cp -a out/. ../jazzyears.github.io'"
   },
   "browser": {
     "fs": false
   },
   "dependencies": {
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^9.0.0",
     "next": "^10.2.0",
     "next-images": "^1.7.0",
+    "next-optimized-images": "^2.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.32.13",
