--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "deploy": "rm -rf node_modules/.cache && rimraf out && next build && next export && touch out/.nojekyll && gh-pages -d out -t true",
     "build-export": "bash -c 'rm -fr ../jazzyears.github.io/{404.html,_next,index.html,posts} && npm run build && npx next export && cp -a out/. ../jazzyears.github.io'"
   },
   "browser": {
@@ -16,12 +17,16 @@
     "imagemin-optipng": "^8.0.0",
     "imagemin-svgo": "^9.0.0",
     "next": "^10.2.0",
+    "next-deploy": "^1.2.4",
     "next-images": "^1.7.0",
-    "next-optimized-images": "^2.6.2",
+    "next-optimized-images": "^3.0.0-canary.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.32.13",
     "sharp11": "^2.0.2",
     "tone": "^14.7.77"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
